--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"fs": "^0.0.1-security",
 		"into-stream": "^8.0.0",
 		"js-cookie": "^3.0.5",
+		"jsftp": "^2.1.3",
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.4.2",
 		"multer": "^1.4.5-lts.1",
