--- a/package.json
+++ b/package.json
@@ -10,43 +10,22 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
 		"@sveltejs/kit": "^1.22.3",
-		"@types/cookie": "^0.5.1",
-		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.23",
+		"postcss": "^8.4.31",
+		"sass": "^1.69.5",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.0.1",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@azure/storage-blob": "^12.16.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.106",
-		"body-parser": "^1.20.2",
-		"cookie": "^0.5.0",
-		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"express-session": "^1.17.3",
-		"fs": "^0.0.1-security",
-		"into-stream": "^8.0.0",
-		"js-cookie": "^3.0.5",
+		"autoprefixer": "^10.4.16",
 		"jsftp": "^2.1.3",
 		"mongodb": "^5.7.0",
-		"mongoose": "^7.4.2",
-		"multer": "^1.4.5-lts.1",
-		"node-fetch": "^3.3.1",
 		"nodemailer": "^6.9.7",
-		"session": "^0.1.0",
-		"svelte-email": "^0.0.4",
-		"svelte-hmr": "^0.15.3",
-		"svelte-navigator": "^3.2.2"
+		"svelte-preprocess": "^5.1.1",
+		"tailwindcss": "^3.3.5"
 	}
 }
