--- a/package.json
+++ b/package.json
@@ -11,21 +11,32 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
-		"@sveltejs/kit": "^1.22.3",
 		"postcss": "^8.4.31",
 		"sass": "^1.69.5",
 		"svelte": "^3.59.1",
-		"svelte-check": "^3.0.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"@sveltejs/kit": "^1.27.6",
+		"@types/bcrypt": "^5.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.55.0",
+		"@typescript-eslint/parser": "^5.55.0",
+		"eslint": "^8.36.0",
+		"eslint-config-prettier": "^8.7.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte-check": "^3.1.4",
+		"svelte-preprocess": "^5.0.3",
+		"tslib": "^2.5.0",
+		"typescript": "~5.0.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.16",
 		"jsftp": "^2.1.3",
-		"mongodb": "^5.7.0",
 		"nodemailer": "^6.9.7",
 		"svelte-preprocess": "^5.1.1",
-		"tailwindcss": "^3.3.5"
+		"tailwindcss": "^3.3.5",
+		"bcrypt": "^5.1.0",
+		"mongodb": "^6.3.0"
 	}
 }
