--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,14 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"lib": ["es2020", "DOM"],
+		"moduleResolution": "node",
+		"module": "es2020",
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"target": "es2020"
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
